add Micrometer support and Prometheus registry